force-app/main/default/objects/Health_Information__c/Health_Information__c.object-meta.xml
<CustomObject>
    <description>Orphan Health check Information</description>
    <label>Health Information</label>
    <nameField>
        <displayFormat>HI-{00000}</displayFormat>
        <label>Health Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Health Informations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>