force-app/main/default/objects/Health_Information__c/fields/Dental_Condition_Status__c.field-meta.xml
<CustomField>
    <fullName>Dental_Condition_Status__c</fullName>
    <label>Dental Condition Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Health_Status</valueSetName>
    </valueSet>
</CustomField>