force-app/main/default/objects/Health_Information__c/fields/DMS_SponsoreeHealth_Id__c.field-meta.xml
<CustomField>
    <fullName>DMS_SponsoreeHealth_Id__c</fullName>
    <externalId>true</externalId>
    <label>DMS SponsoreeHealth Id</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>