force-app/main/default/objects/Health_Information__c/fields/General_Health_Status__c.field-meta.xml
<CustomField>
    <fullName>General_Health_Status__c</fullName>
    <label>General Health Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Health_Status</valueSetName>
    </valueSet>
</CustomField>