force-app/main/default/objects/Health_Information__c/fields/Visit__c.field-meta.xml
<CustomField>
    <fullName>Visit__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Visit</label>
    <referenceTo>Orphan_Visit__c</referenceTo>
    <relationshipLabel>Health Informations</relationshipLabel>
    <relationshipName>Health_Informations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>