force-app/main/default/objects/Health_Information__c/fields/Weight_MOU__c.field-meta.xml
<CustomField>
    <fullName>Weight_MOU__c</fullName>
    <label>Weight MOU</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>KG</fullName>
                <default>true</default>
                <label>KG</label>
            </value>
            <value>
                <fullName>Lbs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>